--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/originals/bf/80/33/bf80330a6b4525324e166ae245e1b8a4.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Pop-pup</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-campfire-lime-light">
+  <div id="root" class="min-h-screen min-w-full"></div>
+    <svg>
+      <filter id='noiseFilter'>
+        <feTurbulence 
+          type='fractalNoise' 
+          baseFrequency='0.6' 
+          stitchTiles='stitch'/>
+      </filter>
+    </svg>    
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
