--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pop-pup</title>
   </head>
-  <body class="bg-campfire-lime-light">
+  <body class="bg-garden-darkshade">
   <div id="root" class="min-h-screen min-w-full"></div>
     <svg>
       <filter id='noiseFilter'>
